[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/title/title.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/title.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/identity/logo.png" type="Texture" id=3]
[ext_resource path="res://gui/menu/menu_list.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/menu/menu_rows/button_menu_row.tscn" type="PackedScene" id=5]

[node name="Title" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -32.0
margin_right = -8.0
margin_bottom = -8.0
rect_min_size = Vector2( 624, 24 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "LABEL.VERSION"
align = 2
valign = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 64.0
margin_top = 50.0
margin_right = 576.0
margin_bottom = 310.0

[node name="LogoRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="LogoSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 512.0
margin_bottom = 72.0

[node name="MenuList" parent="CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 76.0
margin_right = 512.0
margin_bottom = 252.0

[node name="ContinueGameButton" parent="CenterContainer/VBoxContainer/MenuList" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 512.0
appearance_condition = 6
_text = "BUTTON.CONTINUE_GAME"

[node name="NewGameButton" parent="CenterContainer/VBoxContainer/MenuList" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 36.0
margin_right = 512.0
margin_bottom = 68.0
_text = "BUTTON.NEW_GAME"

[node name="SettingsButton" parent="CenterContainer/VBoxContainer/MenuList" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 72.0
margin_right = 512.0
margin_bottom = 104.0
_text = "BUTTON.SETTINGS"

[node name="CreditsButton" parent="CenterContainer/VBoxContainer/MenuList" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 108.0
margin_right = 512.0
margin_bottom = 140.0
_text = "BUTTON.CREDITS"

[node name="QuitGameButton" parent="CenterContainer/VBoxContainer/MenuList" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 144.0
margin_right = 512.0
margin_bottom = 176.0
_text = "BUTTON.QUIT_GAME"
_sound_type = 0

[node name="MenuSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 512.0
margin_bottom = 260.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
